# Time-series-prediction

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  ERI visualization system.R  ERI visualization.R  LICENSE  Main.py  Makefile  README.md  README_CN.md  __init__.py  codecov.yml  config.py  craw.py  create_data.py  create_features.py  create_features_intro.ipynb  create_model_input.py  load_data.py  prepare_data.py  prepare_data2.py  prepare_model_input.py  pyproject.toml  requirements.txt  run_arima.py  run_dl.py  run_lstm.py  run_multi_var_prediction.py  run_prediction.py  run_seq2seq.py  run_single_var_prediction.py  run_weibull.py  run_weibull_denza.py  run_weibull_series.py  run_wtte.py  setup.cfg  setup.py  text.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/conda/: build.sh  meta.yaml
.github/workflows/: codeql-analysis.yml  lint.yml  pypi_release.yml  test.yml
data/: download_passenger.sh
deep_learning/: LSTM.py
deepts/: __init__.py  config.py  model.py
deepts/data/: create_data.py
deepts/layers/: attention_layer.py  (+5 more)
docker/: Dockerfile
docs/: =0.7.1  README.md  arima.md  feature.md  gan.md  nbeats.md  requirements.txt  requirements_docs.txt  rnn.md  transformer.md  tree.md  unet.md  wavenet.md
examples/: README.md  config.py  make_custom_model.py  prepare_data.py  prepare_feature.py  run_anomaly.py  run_classification.py  run_gan.py  run_gpu_tpus.py  run_optuna.py  run_optuna_tune.py  run_prediction.py  run_prediction_simple.py  run_rnn.py  run_seq2seq.py  run_tcn.py  run_test.py  run_train.py  run_transformer.py  run_tuner.py  run_uncertainty.py  run_wavenet.py  utils.py
models/: ARIMA.py  GBDT.py  LSTM.py  WTTE.py  _diff.py  _ma.py  arima.py  gan.py  lstm.py  saved_model.pb  seq2seq.py  svm.py  weibull.py  weibull_autoregressive.py  weibull_mixed.py  weibull_opt.py  wtte.py  xgb.py
models_basic/: Basic_seq2seq_timeseries.ipynb  basic_lstm.ipynb
raw_data/: prepare_data.py
survival/: data_helper.py
tests/: passenger_data_test.py  rnn_test.py  sine_data_test.py  test_constants.py  test_demo.py  test_generator.py  test_serving.py  test_trainer.py  test_tuner.py  transformer_layer_test.py
tfts/: __init__.py  config.py  constants.py  data.py  generator.py  get_data.py  loss.py  model.py  optimizer.py  trainer.py  training_args.py  tuner.py
(+212 files in other folders)
